--- a/Views/LeaveTypes/Index.cshtml
+++ b/Views/LeaveTypes/Index.cshtml
@@ -33,9 +33,37 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @*<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary deleteBtn">Delete</a>*@
+                <button asp-route-id="@item.Id" data-id=@item.Id class="btn btn-primary deleteBtn" type="button">Delete</button>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<form asp-action="Delete" method="post" id="deleteForm">
+    <input type="hidden" id="leaveTypeId" name="id"/>
+</form>
+
+@section Scripts{
+    <script>
+        $(function(){
+            $('.dgeleteBtn').click(function(e){
+                swal({
+                    title:"Are you sure?",
+                    text: "Are you sure you want to delete this record",
+                    icon : "warning",
+                    buttons:true,
+                    dangerMode:true
+                }).then((confirm) => {
+                    if(confirm){
+                        var btn = $(this);
+                        var id= btn.data("id");
+                        $('#leaveTypeId').val(id);
+                        $('#deleteForm').submit();
+                    }
+                });
+            });
+        });
+    </script>
+}
