--- a/Views/LeaveTypes/Create.cshtml
+++ b/Views/LeaveTypes/Create.cshtml
@@ -23,8 +23,8 @@
                 <span asp-validation-for="DefaultDays" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" asp-action="Index">Back to List</button>
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button class="btn btn-primary" asp-action="Index"><i class="fa-solid fa-arrow-left-long"></i></button>
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
