--- a/Views/LeaveTypes/Details.cshtml
+++ b/Views/LeaveTypes/Details.cshtml
@@ -28,7 +28,7 @@
 
 <div>
     <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary"><i class="fa-solid fa-arrow-left-long"></i></a>
    
 </div>
 
