--- a/Views/LeaveTypes/Edit.cshtml
+++ b/Views/LeaveTypes/Edit.cshtml
@@ -24,7 +24,7 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <button class="btn btn-primary" asp-action="Index">Back to List</button>
+                <button class="btn btn-primary" asp-action="Index"><i class="fa-solid fa-arrow-left-long"></i></button>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
