--- a/Views/LeaveTypes/Index.cshtml
+++ b/Views/LeaveTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-warning" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -31,10 +31,10 @@
                 @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a> |
+                <a asp-action="Details" class="btn btn-info" asp-route-id="@item.Id"><i class="fa-regular fa-pen-to-square"></i></a> |
                 @*<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary deleteBtn">Delete</a>*@
-                <button asp-route-id="@item.Id" data-id=@item.Id class="btn btn-primary deleteBtn" type="button">Delete</button>
+                <button asp-route-id="@item.Id" data-id=@item.Id class="btn btn-warning deleteBtn" type="button"><i class="fa-solid fa-trash"></i></button>
             </td>
         </tr>
 }
@@ -48,6 +48,9 @@
 @section Scripts{
     <script>
         $(function(){
+
+            $('.table').DataTable();
+
             $('.dgeleteBtn').click(function(e){
                 swal({
                     title:"Are you sure?",
